--- a/src/html/internal-modules/video-banner.html
+++ b/src/html/internal-modules/video-banner.html
@@ -1,2 +1,13 @@
 
-<section class="video-banner"></section>
+<section class="video-banner">
+  <div class="video-banner__item">
+    <h1 class="video-banner__title">Video Tutorials</h1>
+    <p class="video-banner__description">
+       Dive into our collection of easy-to-follow video tutorials designed to make depositing 
+      funds for your online gaming adventures a breeze. Whether you're a seasoned gamer or a newcomer, 
+      our step-by-step guides will ensure you spend less time figuring out payments and more time enjoying your 
+      favorite games. Get started today and experience seamless, secure, and swift transactions with BetAnySports.
+    </p>
+  </div>
+  <div class="video-banner__item"></div>
+</section>
